# funkagent

./: .env  pyproject.toml  quickstart.ipynb  vector-search.ipynb
funkagent/: agents.py
retriever/: AzureCognitiveSearchRetriever.py  AzureCognitiveSearchRetriever_old.py
