[tool.poetry]
name = "funkagent"
version = "0.0.3"
description = "Minimal agent framework using OpenAI functions"
authors = ["James Briggs <james@aurelio.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
ipykernel = "^6.25.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
