[tool.poetry]
name = "funkagent"
version = "0.0.3"
description = "Minimal agent framework using OpenAI functions"
authors = ["James Briggs <james@aurelio.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
ipykernel = "^6.25.2"
python-dotenv = "^1.0.0"
langchain = "^0.0.291"
flask = "^2.3.3"
azure-identity = "^1.14.0"
azure-cosmos = "^4.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
